overflow corrected

--- a/css/events.css
+++ b/css/events.css
@@ -5,8 +5,7 @@
 }
 
 #events-section .mainhead h1 {
-  /* margin-left: 11%; */
-  text-align: center;
+  margin-left: 11%;
   font-size: 4rem;
   margin-bottom: 80px;
   font-weight: bold;
@@ -77,7 +76,7 @@
     position: relative;
     border: none;
     overflow: hidden;
-    margin-top: 10px;
+    margin-top: 5px;
     cursor: pointer;
   }
   #events-section .contain .card-short {
