--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -227,6 +227,7 @@
     position: absolute;
     top: 80px;
     left: 40px;
+    /* bottom: 1000px; */
     height: 65%;
     width: 50%;
   }
@@ -273,6 +274,7 @@
   #frontpage .main-logo {
     position: absolute;
     top: 100px;
+    /* bottom: 1000px; */
     height: 55%;
     width: 52%;
   }
@@ -287,7 +289,7 @@
     display: flex;
     font-size: 3rem;
     font-weight: bold;
-    margin-top: 60px;
+    margin-top: 20px;
   }
 
   #frontpage .main-content {
